<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlueSky Reader</string>
    <string name="SearchAozora">Search in Aozora Bunko</string>
    <string name="menu_update">Update</string>
    <string name="menu_index">Show author index</string>
    <string name="menu_create_epub">Create EPUB</string>
    <string name="menu_about">About...</string>
    <string name="author_index">Author Index/BlueSky Reader</string>
    <string name="works_list">Works List</string>
    <string name="author_a">Author A/あ</string>
    <string name="author_ka">Author KA/か</string>
    <string name="author_sa">Author SA/さ</string>
    <string name="author_ta">Author TA/た</string>
    <string name="author_na">Author NA/な</string>
    <string name="author_ha">Author HA/は</string>
    <string name="author_ma">Author MA/ま</string>
    <string name="author_ya">Author YA/や</string>
    <string name="author_ra">Author RA/ら</string>
    <string name="author_wa">Author WA/わ</string>
    <string name="author_others">Author others</string>
    <string name="author_search_a">Author start with A/あ</string>
    <string name="author_search_i">Author start with I/い</string>
    <string name="author_search_u">Author start with U/う</string>
    <string name="author_search_e">Author start with E/え</string>
    <string name="author_search_o">Author start with O/お</string>
    <string name="author_search_ka">Author start with KA/か</string>
    <string name="author_search_ki">Author start with KI/き</string>
    <string name="author_search_ku">Author start with KU/く</string>
    <string name="author_search_ke">Author start with KE/け</string>
    <string name="author_search_ko">Author start with KO/こ</string>
    <string name="author_search_sa">Author start with SA/さ</string>
    <string name="author_search_si">Author start with SI/し</string>
    <string name="author_search_su">Author start with SU/す</string>
    <string name="author_search_se">Author start with SE/せ</string>
    <string name="author_search_so">Author start with SO/そ</string>
    <string name="author_search_ta">Author start with TA/た</string>
    <string name="author_search_ti">Author start with CHI/ち</string>
    <string name="author_search_tu">Author start with TSU/つ</string>
    <string name="author_search_te">Author start with TE/て</string>
    <string name="author_search_to">Author start with TO/と</string>
    <string name="author_search_na">Author start with NA/な</string>
    <string name="author_search_ni">Author start with NI/に</string>
    <string name="author_search_nu">Author start with NU/ぬ</string>
    <string name="author_search_ne">Author start with NE/ね</string>
    <string name="author_search_no">Author start with NO/の</string>
    <string name="author_search_ha">Author start with HA/は</string>
    <string name="author_search_hi">Author start with HI/ひ</string>
    <string name="author_search_hu">Author start with FU/ふ</string>
    <string name="author_search_he">Author start with HE/へ</string>
    <string name="author_search_ho">Author start with HO/ほ</string>
    <string name="author_search_ma">Author start with MA/ま</string>
    <string name="author_search_mi">Author start with MI/み</string>
    <string name="author_search_mu">Author start with MU/む</string>
    <string name="author_search_me">Author start with ME/め</string>
    <string name="author_search_mo">Author start with MO/も</string>
    <string name="author_search_ya">Author start with YA/や</string>
    <string name="author_search_yu">Author start with YU/ゆ</string>
    <string name="author_search_yo">Author start with YO/よ</string>
    <string name="author_search_ra">Author start with RA/ら</string>
    <string name="author_search_ri">Author start with RI/り</string>
    <string name="author_search_ru">Author start with RU/る</string>
    <string name="author_search_re">Author start with RE/れ</string>
    <string name="author_search_ro">Author start with RO/ろ</string>
    <string name="author_search_wa">Author start with WA/わ</string>
    <string name="author_search_wo">Author start with WO/を</string>
    <string name="author_search_n">Author start with N/ん</string>
    <string name="section_body">BODY</string>
    <string name="parsing_xhtml">Parsing XHTML...</string>
    <string name="creating_toc">Creating TOC...</string>
    <string name="creating_epub">Creating EPUB...</string>
    <string name="created_epub">Created EPUB successfully!</string>
    <string name="create_failed">Failed creating EPU</string>
    <string name="description1">Generated from BlueSky Library</string>
    <string name="description2">Created by BlueSky Reader https://play.google.com/store/apps/details?id=com.github.naofum.blueskyreader</string>
    <string name="save_to">Save to</string>
    <string name="file_name">Output File Name</string>
    <string name="convert_gaiji">Convert Gaiji to Character</string>
    <string name="id_for_accessibility">Add id for accessibility</string>
    <string name="ssl_error">The SSL Certificate is invalid. Continue anyway?</string>
    <string name="progress">Progress</string>
    <string name="create">CREATE</string>
    <string name="close">CLOSE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/9214589741</string>
</resources>
